--- a/backend/notebook.ipynb
+++ b/backend/notebook.ipynb
@@ -1165,6 +1165,49 @@
     "\n",
     "demo.launch()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45aaeb041f2541f8baade9c67ce0d814",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "for i in tqdm(range(0, 100, 10)):\n",
+    "  print(i)"
+   ]
   }
  ],
  "metadata": {
